--- a/src/assets/components/Header/index.scss
+++ b/src/assets/components/Header/index.scss
@@ -23,6 +23,11 @@
 
   & a {
     text-decoration: none;
+    text-transform: none;
+    @media screen and (max-width: 768px) {
+      text-transform: uppercase;
+      font-size: 12px;
+    }
   }
 
   & .active-link {
